fix z-index of remove bx

--- a/backend/templates/zend/assets/css/store-edit.css
+++ b/backend/templates/zend/assets/css/store-edit.css
@@ -168,7 +168,7 @@
     height: 40px;
     background-color: #5D78FF;
     position: absolute;
-    z-index: 10000;
+    z-index: 50;
     top: 0px;
     border-radius: 0px 6px 0px 5px;
 }
